# onetime-downloader

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md
src/: handlers.rs  main.rs  models.rs  objects.rs  time_provider.rs
src/storage/: dynamodb.rs  invalid.rs  mod.rs  postgres.rs  util.rs
