[package]
name = "onetime-downloader"
version = "0.1.0"
authors = ["Chris Rogus <rogusdev@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-multipart = "0.2.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
rusoto_dynamodb = "0.45.0"
futures = "0.3.1"
sanitize-filename = "0.2"
bytes = "0.5.6"
async-trait = "0.1.38"
rand = "0.7.3"
maplit = "1.0.2"
dyn-clonable = "0.9.0"
tokio-postgres = "0.5.5"
deadpool-postgres = "0.5.6"
